--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./stylesheets/swiper-bundle.min.css">
     <link rel="stylesheet" href="./javascripts/swiper-bundle.min.js">
     <link rel="stylesheet" href="./stylesheets/product.css">
+
 </head>
 
 <body>
@@ -30,7 +31,7 @@
 
 
 
-{{{_sections.scripts}}}
+{{!-- {{{_sections.scripts}}} --}}
   <!-- END PAGE LEVEL JAVASCRIPTS -->
 </body>
 
