--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -1,4 +1,4 @@
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
 <style type="stylesheets">
     @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
@@ -1301,7 +1301,7 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script type="module" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
 function submitReview(event) {
     var reviewText = $('#review').val();
