--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -435,7 +435,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="button"><a href="" class="primary-btn">Load more</a></div>
+                                <div class="pagination">
+                                        <a id="prev_page"><</a>
+                                        <a id="1" href="" class="active">1</a>
+                                        <a id="2" href="">2</a>
+                                        <a id="3" href="">3</a>
+                                        <a id="4" href="">4</a>
+                                        <a id="5" href="">5</a>
+                                        <a id="next_page" href="">></a>
+                                    </div>
                             </div>
                         </div>
                     </div>
