--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -137,7 +137,7 @@
                                         <li><a href="">Balenciaga</a></li>
                                     </ul>
                                 </li>
-                                <li><a href=""><span>Sale</span></a></li>
+                                <li><a href=""><span>Login</span></a></li>
                             </ul>
                         </nav>
                         <div class="branding"><a href="">Shopping</a></div>
@@ -608,7 +608,7 @@
                             <li><a href="#">Balenciaga</a></li>
                         </ul>
                     </li>
-                    <li><a href=""><span>Sale</span></a></li>
+                    <li><a href=""><span>Login</span></a></li>
 
 
                 </ul>
