--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -11,7 +11,7 @@
                         </div>
                         <div class="list-inline">
                             <ul>
-                                <li><a href=""><i class="ri-user-line"></i></a></li>
+                                <li><a href="/login"><i class="ri-user-line"></i></a></li>
                                 <li><a href=""><span class="item-floating">7</span>
                                         <i class="ri-star-line"></i>
                                     </a></li>
@@ -187,14 +187,14 @@
                                         <i class="ri-arrow-down-s-line"></i>
                                     </a>
                                     <ul class="sub-menu list-block">
-                                        <li><a href="">Nike</a></li>
-                                        <li><a href="">Dior</a></li>
-                                        <li><a href="">Adidas</a></li>
-                                        <li><a href="">Balenciaga</a></li>
+                                        <li><a href="/category/nike">Nike</a></li><!--Product brands Nike-->
+                                        <li><a href="/category/dior">Dior</a></li><!--Product brands Dior-->
+                                        <li><a href="/category/adidas">Adidas</a></li><!--Product brands Adidas-->
+                                        <li><a href="/category/balenciaga">Balenciaga</a></li><!--Product brands Balenciaga-->
                                     </ul>
                                 </li>
-                                <li><a href=""><span>Sale</span></a></li>
-                                <li><a href="contact.hbs"><span>Contacts</span></a></li>
+                                <li><a href="/login"><span>Login</span></a></li> <!--login-->
+                                <li><a href=""><span>Contacts</span></a></li> <!--contact-->
                             </ul>
                         </nav>
                         <div class="branding"><a href="">Shopping</a></div>
@@ -742,15 +742,13 @@
                             <li><a href="#">Balenciaga</a></li>
                         </ul>
                     </li>
-                    <li><a href=""><span>Sale</span></a></li>
+                    <li><a href=""><span>Contacts</span></a></li>
 
 
                 </ul>
             </nav>
             <div class="button">
-                <a href="" class="secondary-btn">Login</a>
-                <a href="" class="primary-btn">Register</a>
-
+                <a href="/login" class="secondary-btn">Login</a>
             </div>
         </div>
     </div>
