--- a/views/login/forgot-password.hbs
+++ b/views/login/forgot-password.hbs
@@ -28,7 +28,7 @@
                         <button class="btn btn-sz-primary mt-5">Reset</button>
                     </div>
                     <div class="col-6 pt-5">
-                        <a href="./login.hbs" class="back-to-login">Back To Login</a>
+                        <a href="/login" class="back-to-login">Back To Login</a>
                     </div>
                 </div>
             </div>
