--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -70,7 +70,7 @@
                     <nav>
                         <ul>
                             <li><a href="/"><i class="ri-arrow-left-line"></i></a></li>
-                            <li>Don't have an account?<a href="#0" class="t-signup">Sign up</a>or <a href="./forgot-password.hbs">Forgot Password</a></li>
+                            <li>Don't have an account?<a href="#0" class="t-signup">Sign up</a>or <a href="/forgot-password">Forgot Password</a></li>
                         </ul>
                     </nav>
                     <div class="heading">
