--- a/views/404/404.hbs
+++ b/views/404/404.hbs
@@ -24,7 +24,7 @@
             </div>
             <div class="description">
                 <h2>404 Page not found</h2>
-                <button type="button" class="btn btn-secondary"><a href="index.ejs"
+                <button type="button" class="btn btn-secondary"><a href="/"
                         style="text-decoration: none;color: white;">Return to Home Page</a></button>
             </div>
         </div>
