--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -179,7 +179,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="/category"><span>Disc</span></a></li>
+                                <li><a href="/aboutus"><span>Our</span></a></li>
                             </ul>
 
                             <ul>
@@ -197,7 +197,7 @@
                                 <li><a href=""><span>Contacts</span></a></li> <!--contact-->
                             </ul>
                         </nav>
-                        <div class="branding"><a href="">Shopping</a></div>
+                        <div class="branding"><a href="/">Shopping</a></div>
                     </div>
                     <!--Header right-->
                     <div class="header-right">
@@ -641,8 +641,7 @@
                         <div class="list-block">
                             <h3 class="dot-title">Service</h3>
                             <ul>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Careers</a></li>
+                                <li><a href="/aboutus">About us</a></li>
                                 <li><a href="#">Delivery Information</a></li>
                                 <li><a href="#">Terms & Condition</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
@@ -651,8 +650,8 @@
                         <div class="list-block">
                             <h3 class="dot-title">Pages</h3>
                             <ul>
-                                <li><a href="#">My account</a></li>
-                                <li><a href="#">Login</a></li>
+                                <li><a href="/category">Category Product</a></li>
+                                <li><a href="/login">Login</a></li>
                                 <li><a href="#">Wishlist</a></li>
                                 <li><a href="#">Cart</a></li>
                                 <li><a href="#">Checkout</a></li>
@@ -678,10 +677,10 @@
                     <div class="bottom">
                         <div class="list-inline">
                             <ul>
-                                <li><a href=""><i class="ri-facebook-line"></i></a></li>
-                                <li><a href=""><i class="ri-instagram-line"></i></a></li>
-                                <li><a href=""><i class="ri-twitter-line"></i></a></li>
-                                <li><a href=""><i class="ri-pinterest-line"></i></a></li>
+                                <li><a href="https://www.facebook.com/bach0807/"><i class="ri-facebook-line"></i></a></li>
+                                <li><a href="https://www.instagram.com/"><i class="ri-instagram-line"></i></a></li>
+                                <li><a href="https://github.com/"><i class="ri-github-line"></i></a></li>
+                                <li><a href="https://www.pinterest.com/search/pins/?q=nike%20450*600&rs=typed"><i class="ri-pinterest-line"></i></a></li>
                             </ul>
                         </div>
                         <div class="copyright">
