--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -123,7 +123,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href=""><span>Disc</span></a></li>
+                                <li><a href="/aboutus"><span>Our</span></a></li>
                             </ul>
 
                             <ul>
@@ -487,7 +487,7 @@
 
 
     </main>
-    <footer>
+   <footer>
         <div class="inner-footer">
             <div class="container">
                 <div class="wrap">
@@ -507,8 +507,7 @@
                         <div class="list-block">
                             <h3 class="dot-title">Service</h3>
                             <ul>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Careers</a></li>
+                                <li><a href="/aboutus">About us</a></li>
                                 <li><a href="#">Delivery Information</a></li>
                                 <li><a href="#">Terms & Condition</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
@@ -517,8 +516,8 @@
                         <div class="list-block">
                             <h3 class="dot-title">Pages</h3>
                             <ul>
-                                <li><a href="#">My account</a></li>
-                                <li><a href="#">Login</a></li>
+                                <li><a href="/category">Category Product</a></li>
+                                <li><a href="/login">Login</a></li>
                                 <li><a href="#">Wishlist</a></li>
                                 <li><a href="#">Cart</a></li>
                                 <li><a href="#">Checkout</a></li>
@@ -544,10 +543,10 @@
                     <div class="bottom">
                         <div class="list-inline">
                             <ul>
-                                <li><a href=""><i class="ri-facebook-line"></i></a></li>
-                                <li><a href=""><i class="ri-instagram-line"></i></a></li>
-                                <li><a href=""><i class="ri-twitter-line"></i></a></li>
-                                <li><a href=""><i class="ri-pinterest-line"></i></a></li>
+                                <li><a href="https://www.facebook.com/bach0807/"><i class="ri-facebook-line"></i></a></li>
+                                <li><a href="https://www.instagram.com/"><i class="ri-instagram-line"></i></a></li>
+                                <li><a href="https://github.com/"><i class="ri-github-line"></i></a></li>
+                                <li><a href="https://www.pinterest.com/search/pins/?q=nike%20450*600&rs=typed"><i class="ri-pinterest-line"></i></a></li>
                             </ul>
                         </div>
                         <div class="copyright">
