--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -158,33 +158,20 @@
                                                         </div>
                                                         <div class="links">
                                                             <div class="list-block">
-                                                                <h3 class="dot-title">Jordan</h3>
+                                                                <h3 class="dot-title">Categories</h3>
                                                                 <ul>
-                                                                    <li><a href="#">Vans</a></li>
-                                                                    <li><a href="#">New Balance</a></li>
-                                                                    <li><a href="#">MLB</a></li>
-                                                                    <li><a href="#">Puma</a></li>
-                                                                    <li><a href="#">Supreme</a></li>
+                                                                    <li><a href="#">Jordan</a></li>
+                                                                    <li><a href="#">Gym and Trainning</a></li>
+                                                                    <li><a href="#">Sandal and Slides</a></li>
+                                                                    <li><a href="#">Running</a></li>
+
                                                                 </ul>
                                                             </div>
                                                             <div class="list-block">
-                                                                <h3 class="dot-title">Shoes</h3>
+                                                                <h3 class="dot-title">Brands</h3>
                                                                 <ul>
-                                                                    <li><a href="#">Louis Vuition</a></li>
-                                                                    <li><a href="#">Dolce and Gabbana</a></li>
-                                                                    <li><a href="#">Gucci</a></li>
                                                                     <li><a href="#">Nike</a></li>
                                                                     <li><a href="#">Adidas</a></li>
-                                                                </ul>
-                                                            </div>
-                                                            <div class="list-block">
-                                                                <h3 class="dot-title">Boots</h3>
-                                                                <ul>
-                                                                    <li><a href="#">Armani</a></li>
-                                                                    <li><a href="#">Channel</a></li>
-                                                                    <li><a href="#">Dior</a></li>
-                                                                    <li><a href="#">Gucci</a></li>
-                                                                    <li><a href="#">Hugo Boss</a></li>
                                                                 </ul>
                                                             </div>
                                                         </div>
@@ -892,9 +879,9 @@
                             <ul>
                                 <li><a href="/category">Category Product</a></li>
                                 <li><a href="/login">Login</a></li>
-                                <li><a href="#">Wishlist</a></li>
-                                <li><a href="#">Cart</a></li>
-                                <li><a href="#">Checkout</a></li>
+                                <li><a href="">Wishlist</a></li>
+                                <li><a href="/cart">Cart</a></li>
+                                <li><a href="/checkout">Checkout</a></li>
                             </ul>
                         </div>
                         <div class="list-block">
